feat：icon,title change

--- a/zh/changelog.html
+++ b/zh/changelog.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="剪贴板管理器更新日志, 更新记录, 版本历史">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow">
-    <title data-i18n="page_title_changelog">更新日志 - Clipboard Safe</title>
+    <title>更新日志 - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/changelog.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/changelog.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/changelog.html">
@@ -30,15 +30,15 @@
     <meta name="twitter:description" content="查看 Clipboard Safe 的最新更新和改进。">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
