--- a/zh/index.html
+++ b/zh/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="剪贴板管理器, 剪贴板历史, Mac 应用, 效率工具, 隐私">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_home">Clipboard Safe - 智能剪贴板管理工具</title>
+    <title>Clipboard Safe - 智能剪贴板管理工具</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/">
@@ -31,8 +31,8 @@
     <meta name="twitter:description" content="智能剪贴板管理工具，采用隐私第一的设计。自动跟踪历史记录、快速搜索和安全的本地存储。">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -85,7 +85,7 @@
       "@type": "Organization",
       "name": "Clipboard Safe",
       "url": "https://clipboardsafe.com",
-      "logo": "https://clipboardsafe.com/favicon.png",
+      "logo": "https://clipboardsafe.com/favicon.ico",
       "email": "smilejie2020@foxmail.com",
       "description": "隐私第一的 Mac 剪贴板管理工具",
       "sameAs": [
@@ -104,7 +104,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
