--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="clipboard manager changelog, updates, release notes, version history">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow">
-    <title data-i18n="page_title_changelog">Changelog - Clipboard Safe</title>
+    <title>Changelog - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/changelog.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/changelog.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/changelog.html">
@@ -30,15 +30,15 @@
     <meta name="twitter:description" content="View the latest updates and improvements for Clipboard Safe.">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
