--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="baidu-site-verification" content="codeva-0TQPcjdusu" />
-    <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
+    <title>Clipboard Safe - Intelligent Clipboard Manager</title>
     <link rel="canonical" href="https://clipboardsafe.com/">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/">
@@ -32,8 +32,8 @@
     <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -111,7 +111,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
