--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Clipboard Safe Privacy Policy. Learn how we protect your data with zero data collection, local storage only, and complete offline operation. Your privacy is our priority.">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_privacy">Privacy Policy - Clipboard Safe</title>
+    <title>Privacy Policy - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/privacy.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/privacy.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/privacy.html">
@@ -27,15 +27,15 @@
     <meta name="twitter:title" content="Privacy Policy - Clipboard Safe">
     <meta name="twitter:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
