--- a/support.html
+++ b/support.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Technical Support for Clipboard Safe. Get help with FAQs, system requirements, troubleshooting guides, and contact information for assistance.">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_support">Technical Support - Clipboard Safe</title>
+    <title>Technical Support - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/support.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/support.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/support.html">
@@ -27,15 +27,15 @@
     <meta name="twitter:title" content="Technical Support - Clipboard Safe">
     <meta name="twitter:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
