--- a/zh/privacy.html
+++ b/zh/privacy.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Clipboard Safe Privacy Policy. Learn how we protect your data with zero data collection, local storage only, and complete offline operation. Your privacy is our priority.">
+    <meta name="description" content="Clipboard Safe 隐私政策。零数据收集、仅本地存储、完全离线运行，保障你的隐私。">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_privacy">Privacy Policy - Clipboard Safe</title>
+    <title>隐私政策 - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/privacy.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/privacy.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/privacy.html">
@@ -27,15 +27,15 @@
     <meta name="twitter:title" content="隐私政策 - Clipboard Safe">
     <meta name="twitter:description" content="了解我们对隐私的承诺：零数据收集，仅本地存储，加密保护。">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
