--- a/zh/support.html
+++ b/zh/support.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Technical Support for Clipboard Safe. Get help with FAQs, system requirements, troubleshooting guides, and contact information for assistance.">
+    <meta name="description" content="Clipboard Safe 技术支持。常见问题解答、系统要求、故障排除指南与联系方式。">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_support">Technical Support - Clipboard Safe</title>
+    <title>技术支持 - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/support.html">
     <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/support.html">
     <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/support.html">
@@ -27,15 +27,15 @@
     <meta name="twitter:title" content="技术支持 - Clipboard Safe">
     <meta name="twitter:description" content="Clipboard Safe 技术支持：常见问题、故障排除指南与联系方式。">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
+                <img src="/favicon.ico" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
