--- a/changelog.html
+++ b/changelog.html
@@ -61,13 +61,33 @@
     <section class="content-section">
         <div class="container">
             <div class="changelog-container">
+
+                <!-- Version 1.9.1 -->
+                <div class="version-block">
+                    <div class="version-header">
+                        <h2 class="version-number">Version 1.9.1</h2>
+                        <span class="version-date">January 23, 2026</span>
+                        <span class="version-badge version-badge-latest">Latest</span>
+                    </div>
+
+                    <div class="changelog-section">
+                        <h3 class="changelog-category">🚀 Experience Upgrade</h3>
+                        <ul class="changelog-list">
+                            <li>Clipboard actions feel smoother and more intuitive end-to-end</li>
+                            <li>Dark mode now stays in sync when opening from the status bar or clipboard entry</li>
+                            <li>Clipboard cards use a unified size; long-text expansion is clearer and easier to read</li>
+                            <li>Clicking items in the main list opens the floating clipboard window directly for faster access</li>
+                            <li>Edit clipboard text in place without re-copying</li>
+                            <li>Streamlined card actions: redundant buttons removed and key actions aligned below content</li>
+                        </ul>
+                    </div>
+                </div>
                 
                 <!-- Version 1.9.0 -->
                 <div class="version-block">
                     <div class="version-header">
                         <h2 class="version-number">Version 1.9.0</h2>
                         <span class="version-date">January 16, 2026</span>
-                        <span class="version-badge version-badge-latest">Latest</span>
                     </div>
                     
                     <div class="changelog-section">
