refactor: seo script

--- a/index.html
+++ b/index.html
@@ -33,79 +33,71 @@
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <!-- JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "SoftwareApplication",
-      "name": "Clipboard Safe",
-      "alternateName": "Clipboard Safe - Intelligent Clipboard Manager",
-      "description": "An intelligent clipboard manager for Mac with privacy-first design. Automatically save, search, and manage clipboard history locally.",
-      "url": "https://clipboardsafe.com",
-      "image": "https://clipboardsafe.com/statics/og-image.png",
-      "author": {
-        "@type": "Organization",
-        "name": "Clipboard Safe",
-        "url": "https://clipboardsafe.com",
-        "email": "smilejie2020@foxmail.com"
-      },
-      "applicationCategory": "ProductivityApplication",
-      "operatingSystem": "macOS",
-      "softwareVersion": "1.0",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD",
-        "url": "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.5",
-        "ratingCount": "50"
-      },
-      "availableOnDevice": ["Mac"],
-      "featureList": [
-        "Automatic Clipboard Management",
-        "Quick Search",
-        "Quick Access with Shortcuts",
-        "Adjustable History Limit",
-        "Privacy Protection",
-        "Local Encryption"
-      ],
-      "sameAs": [
-        "https://github.com/JunJie-GitHub/clipboard_support",
-        "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
-      ]
-    }
-    </script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "@id": "https://clipboardsafe.com/#app",
+  "name": "Clipboard Safe",
+  "alternateName": "Clipboard Safe - Intelligent Clipboard Manager",
+  "description": "An intelligent clipboard manager for Mac with privacy-first design. Automatically save, search, and manage clipboard history locally.",
+  "url": "https://clipboardsafe.com",
+  "image": "https://clipboardsafe.com/statics/app-icon.png",
+  "operatingSystem": "macOS",
+  "applicationCategory": "ProductivityApplication",
+  "softwareVersion": "1.0",
+  "downloadUrl": "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12",
+
+  "publisher": {
+    "@type": "Organization",
+    "@id": "https://clipboardsafe.com/#org",
+    "name": "Clipboard Safe",
+    "url": "https://clipboardsafe.com"
+  },
+
+  "offers": {
+    "@type": "Offer",
+    "url": "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.5",
+    "ratingCount": "50",
+    "bestRating": "5",
+    "worstRating": "1"
+  },
+
+  "review": {
+    "@type": "Review",
+    "author": {
       "@type": "Organization",
-      "name": "Clipboard Safe",
-      "url": "https://clipboardsafe.com",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://clipboardsafe.com/statics/og-image.png",
-        "width": 1200,
-        "height": 630
-      },
-      "image": "https://clipboardsafe.com/statics/og-image.png",
-      "email": "smilejie2020@foxmail.com",
-      "description": "Privacy-first intelligent clipboard manager for Mac",
-      "sameAs": [
-        "https://github.com/JunJie-GitHub/clipboard_support",
-        "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "Technical Support",
-        "email": "smilejie2020@foxmail.com"
-      }
+      "name": "Apple App Store"
     }
-    </script>
+  },
+
+  "featureList": [
+    "Automatic Clipboard Management",
+    "Quick Search",
+    "Quick Access with Shortcuts",
+    "Adjustable History Limit",
+    "Privacy Protection",
+    "Local Encryption"
+  ],
+
+  "sameAs": [
+    "https://github.com/JunJie-GitHub/clipboard_support",
+    "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
+  ]
+}
+</script>
+
 </head>
 <body>
     <nav class="navbar">
