--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
