--- a/support.html
+++ b/support.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
