--- a/zh/privacy.html
+++ b/zh/privacy.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="了解我们对隐私的承诺：零数据收集，仅本地存储，加密保护。">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
