--- a/zh/support.html
+++ b/zh/support.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="Clipboard Safe 技术支持：常见问题、故障排除指南与联系方式。">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
