--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <!-- JSON-LD Structured Data -->
@@ -64,14 +64,6 @@
     "price": "0",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock"
-  },
-
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "4.5",
-    "ratingCount": "50",
-    "bestRating": "5",
-    "worstRating": "1"
   },
 
   "review": {
