--- a/support.html
+++ b/support.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Technical Support - Clipboard Safe">
     <meta name="twitter:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
