--- a/zh/index.html
+++ b/zh/index.html
@@ -31,7 +31,7 @@
     <meta name="twitter:description" content="智能剪贴板管理工具，采用隐私第一的设计。自动跟踪历史记录、快速搜索和安全的本地存储。">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <!-- JSON-LD Structured Data -->
