--- a/zh/privacy.html
+++ b/zh/privacy.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="隐私政策 - Clipboard Safe">
     <meta name="twitter:description" content="了解我们对隐私的承诺：零数据收集，仅本地存储，加密保护。">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
