--- a/changelog.html
+++ b/changelog.html
@@ -30,8 +30,8 @@
     <meta name="twitter:description" content="View the latest updates and improvements for Clipboard Safe.">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
