--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Privacy Policy - Clipboard Safe">
     <meta name="twitter:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
