--- a/zh/changelog.html
+++ b/zh/changelog.html
@@ -30,7 +30,7 @@
     <meta name="twitter:description" content="查看 Clipboard Safe 的最新更新和改进。">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
