--- a/zh/support.html
+++ b/zh/support.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="技术支持 - Clipboard Safe">
     <meta name="twitter:description" content="Clipboard Safe 技术支持：常见问题、故障排除指南与联系方式。">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 </head>
