feat：change log

--- a/changelog.html
+++ b/changelog.html
@@ -62,12 +62,27 @@
         <div class="container">
             <div class="changelog-container">
 
+                <!-- Version 1.9.2 -->
+                <div class="version-block">
+                    <div class="version-header">
+                        <h2 class="version-number">Version 1.9.2</h2>
+                        <span class="version-date">February 5, 2026</span>
+                        <span class="version-badge version-badge-latest">Latest</span>
+                    </div>
+
+                    <div class="changelog-section">
+                        <h3 class="changelog-category">⚡ Performance</h3>
+                        <ul class="changelog-list">
+                            <li>Performance optimization — smoother clipboard dropdown and search</li>
+                        </ul>
+                    </div>
+                </div>
+
                 <!-- Version 1.9.1 -->
                 <div class="version-block">
                     <div class="version-header">
                         <h2 class="version-number">Version 1.9.1</h2>
                         <span class="version-date">January 23, 2026</span>
-                        <span class="version-badge version-badge-latest">Latest</span>
                     </div>
 
                     <div class="changelog-section">
