--- a/zh/changelog.html
+++ b/zh/changelog.html
@@ -62,12 +62,27 @@
         <div class="container">
             <div class="changelog-container">
 
+                <!-- Version 1.9.2 -->
+                <div class="version-block">
+                    <div class="version-header">
+                        <h2 class="version-number">版本 1.9.2</h2>
+                        <span class="version-date">2026年2月5日</span>
+                        <span class="version-badge version-badge-latest">最新版本</span>
+                    </div>
+                    
+                    <div class="changelog-section">
+                        <h3 class="changelog-category">⚡ 性能优化</h3>
+                        <ul class="changelog-list">
+                            <li>剪贴板内容下拉、搜索更流畅</li>
+                        </ul>
+                    </div>
+                </div>
+
                 <!-- Version 1.9.1 -->
                 <div class="version-block">
                     <div class="version-header">
                         <h2 class="version-number">版本 1.9.1</h2>
                         <span class="version-date">2026年1月23日</span>
-                        <span class="version-badge version-badge-latest">最新版本</span>
                     </div>
                     
                     <div class="changelog-section">
